add_subdirectory("instructions")

list(APPEND SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/cpq.cpp)
list(APPEND SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/driver.cpp)
list(APPEND SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/statement.cpp)
list(APPEND SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/symbol.cpp)

set(SOURCES ${SOURCES} PARENT_SCOPE)
